# REminiscence

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  Makefile.common  README.md
cmake/: FindSDL2.cmake
src/: collision.cpp  cutscene.cpp  cutscene.h  file.cpp  file.h  fs.cpp  game.cpp  game.h  graphics.cpp  graphics.h  intern.h  intern_structs.h  libretro.cpp  libretro.h  main.cpp  menu.cpp  menu.h  mixer.cpp  mixer.h  mod_player.cpp  mod_player.h  piege.cpp  resource.cpp  resource.h  resource_aba.cpp  resource_aba.h  rs.cfg  screenshot.cpp  screenshot.h  sdlmain.cpp  seq_player.cpp  seq_player.h  sfx_player.cpp  sfx_player.h  staticres.cpp  systemstub.cpp  systemstub.h  systemstub_sdl.cpp  unpack.c  unpack.h  (+5 more)
tests/: CMakeLists.txt  GameTests.cpp
